<?xml version="1.0" encoding="utf-8"?>

<com.ogaclejapan.qiitanium.presentation.view.ArticleListItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_ripple"
    android:paddingBottom="@dimen/spacing_medium"
    android:paddingEnd="@dimen/layout_keyline_1"
    android:paddingStart="@dimen/layout_keyline_1"
    android:paddingTop="@dimen/spacing_medium"
    >

  <TextView
      android:id="@+id/list_item_article_timeago"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.Hint"
      tools:text="@string/e_g_article_timeago"
      />

  <ImageView
      android:id="@+id/list_item_article_bookmark_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:contentDescription="@string/description_image"
      android:src="@drawable/ic_bookmark_white_24dp"
      android:tint="@color/accent"
      android:visibility="gone"
      />

  <RelativeLayout
      android:id="@+id/list_item_article_content"
      android:layout_width="match_parent"
      android:layout_height="@dimen/list_item_article_content_height"
      android:layout_below="@id/list_item_article_timeago"
      android:layout_marginTop="@dimen/spacing_small"
      android:layout_toStartOf="@id/list_item_article_bookmark_icon"
      >

    <TextView
        android:id="@+id/list_item_article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.Title"
        tools:text="@string/e_g_article_title"
        />

    <TextView
        android:id="@+id/list_item_article_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_article_title"
        android:layout_marginTop="@dimen/spacing_xsmall"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.Caption"
        tools:text="@string/e_g_article_body"
        />

  </RelativeLayout>

  <RelativeLayout
      android:id="@+id/list_item_article_author"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/list_item_article_footer_height"
      android:layout_below="@id/list_item_article_content"
      android:layout_marginTop="@dimen/spacing_small"
      >

    <ImageView
        android:id="@+id/list_item_article_author_image"
        android:layout_width="@dimen/thumbnail_small"
        android:layout_height="@dimen/thumbnail_small"
        android:layout_centerVertical="true"
        android:background="@drawable/secondary_oval"
        android:contentDescription="@string/description_image"
        android:scaleType="center"
        android:src="@drawable/ic_person_outline_white_18dp"
        />

    <TextView
        android:id="@+id/list_item_article_author_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/list_item_article_author_image"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/list_item_article_author_chips_text_padding_right"
        android:paddingStart="@dimen/list_item_article_author_chips_text_padding_left"
        android:textAppearance="@style/TextAppearance.Author"
        tools:text="@string/e_g_author_name"
        />

  </RelativeLayout>

  <TextView
      android:id="@+id/list_item_article_tag"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@id/list_item_article_author"
      android:layout_alignTop="@id/list_item_article_author"
      android:layout_marginStart="@dimen/spacing_small"
      android:layout_toEndOf="@id/list_item_article_author"
      android:gravity="center_vertical|end"
      android:singleLine="true"
      android:textAppearance="@style/TextAppearance.Tag"
      tools:text="@string/e_g_article_tags"
      />

</com.ogaclejapan.qiitanium.presentation.view.ArticleListItemView>