<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:background="@color/white"
    >

  <ImageView
      android:id="@id/header_image"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/description_image"
      android:scaleType="centerCrop"
      android:src="@drawable/img_2"
      />

  <TextView
      android:id="@id/back"
      android:layout_width="wrap_content"
      android:layout_height="56dp"
      android:layout_alignParentBottom="true"
      android:background="?android:attr/selectableItemBackground"
      android:drawablePadding="@dimen/spacing_small"
      android:drawableStart="@drawable/ic_arrow_back_circle_white_24dp"
      android:gravity="center_vertical"
      android:paddingEnd="@dimen/spacing_large"
      android:paddingStart="@dimen/spacing_large"
      android:text="@string/back_to_prev"
      android:textColor="@color/white"
      android:textSize="@dimen/text_size_medium"
      tools:text="@string/back_to_prev"
      />

  <TextView
      android:id="@id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@id/back"
      android:layout_marginStart="@dimen/layout_keyline_1"
      android:shadowColor="#888"
      android:shadowDx="1.5"
      android:shadowDy="1.5"
      android:shadowRadius="1.5"
      android:textColor="@color/white"
      android:textSize="@dimen/text_size_title"
      android:textStyle="bold"
      tools:text="@string/label_articles"
      />

</RelativeLayout>
